# Slay_The_Spire_2_TAS

./: .dockerignore  .gitignore  AGENTS.md  Dockerfile  README.md  pyproject.toml
.github/workflows/: windows-exe.yml
bridge/Sts2TelemetryBridge/: Program.cs  Sts2TelemetryBridge.sln
config/: patch-points.0.1-test.json
data/fixtures/: telemetry-combat.json
docs/: README.md  architecture.md  docker.md  implemented-work.md  memory-based-play-directive.md  plan.md  roadmap.md  tas-runtime.md  v1-gaps.md  v1-implementation-directive.md
native/sts2_tas_hook/: CMakeLists.txt  README.md  ipc_contract.md  sts2_tas_hook.cpp
scripts/: _remote_verify_loop10_once.py  build-windows-exe.ps1  run-windows-live-loop.ps1
src/sts2_tas/: __init__.py  __main__.py  action_space.py  actions.py  automation.py  bc.py  capture_state.py  catalog.py  cli.py  cv_calibration.py  dataset.py  encoding.py  env.py  evaluation.py  evaluation_cli.py  executor.py  heuristic.py  json_io.py  live_learning.py  live_state.py  memory_play.py  metrics.py  ml_cli.py  ml_entities.py  ml_schema.py  model.py  recognition.py  rl.py  runtime.py  schema.py  step_factory.py  tas_checkpoint.py  tas_cli.py  tas_experience.py  tas_hook_ipc.py  tas_input.py  tas_movie.py  tas_replay.py  telemetry_client.py  telemetry_schema.py  (+6 more)
tests/: test_actions.py  test_branch_search.py  test_capture_state.py  test_cli.py  test_cli_and_ml.py  test_core_runtime.py  test_cv_region_calibration.py  test_dataset.py  test_docker_assets.py  test_evaluation_baseline.py  test_evaluation_metrics.py  test_full_session_ml_loop_cli.py  test_hook_memory_play_cli.py  test_input_backend.py  test_live_automation_cli.py  test_live_learn_loop_cli.py  test_live_learning_episode.py  test_live_state_extractor.py  test_live_step_cli.py  test_live_step_retry_cli.py  test_live_vision_recognition.py  test_memory_play.py  test_ml_encoding.py  test_ml_schema.py  test_ml_train_smoke_fixture.py  test_model.py  test_recognition.py  test_schema.py  test_step_factory_live_state.py  test_tas_checkpoint.py  test_tas_cli.py  test_tas_experience.py  test_tas_hook_assets.py  test_tas_hook_ipc.py  test_tas_input.py  test_tas_movie.py  test_torch_model.py  test_torch_rl.py  test_trajectory.py  test_transition.py  (+2 more)
tests/fixtures/: ml-train-smoke.jsonl
