[project]
name = "sts2-tas"
version = "0.1.0"
description = "Screen-recognition learning MVP for Slay the Spire 2 TAS decisions."
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
  "numpy>=2.0",
  "pillow>=10.0",
  "pyobjc-framework-quartz>=11.0 ; sys_platform == 'darwin'",
  "torch>=2.11.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-cov>=5.0",
]
build = [
  "pyinstaller>=6.0",
]

[project.scripts]
sts2-tas = "sts2_tas.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/sts2_tas"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = ["--strict-markers", "--strict-config"]
pythonpath = ["src"]

[tool.coverage.run]
source = ["sts2_tas"]

[tool.coverage.report]
fail_under = 100
show_missing = true
exclude_lines = [
  "pragma: no cover",
  "if __name__ == .__main__.:",
]
